# sikshyalaya

./: .dockerignore  .env  .env.development  .env.example  .gitignore  .gitlab-ci.yml  README.md  docker-compose.build.yml  docker-compose.override.yml  docker-compose.yml  package.json
backend/: Dockerfile  alembic.ini  backend.dockerfile  celery.dockerfile  gunicorn.conf.py  manage.py  pyproject.toml  start-reload.sh
backend/api/: __init__.py  api.py
backend/api/endpoints/: assignment.py  assignment_upload.py  auth.py  class_session.py  course.py  department.py  group.py  login.py  personal_note.py  program.py  quiz.py  quiz_answer.py  school.py  teacher_note.py  two_fa.py  user_permission.py  users.py  utils.py
backend/app/: prestart.sh  pyproject.toml
backend/app/alembic/: env.py
backend/app/app/: main.py
backend/core/: cache.py  config.py  permission.py  security.py  throttle.py  websocket.py
backend/core/db/: __init__.py  base.py  init.py  init_db.py  redis_session.py  session.py
backend/core/permission/: default_permission.py
backend/cruds/: __init__.py  assignment.py  assignment_upload.py  base.py  class_session.py  crud_class_session.py  crud_course.py  crud_personal_note.py  crud_user.py  crud_user_permission.py  department.py  file.py  group.py  program.py  quiz.py  quiz_answer.py  school.py  teacher_note.py  user.py  user_permission.py
backend/etc/: base.yml  dev.yml  dock.yml
backend/forms/: class_session.py  login.py
backend/migrations/: env.py
backend/migrations/versions/: .keep  03e9b4993f65_models_updated.py
backend/misc/scripts/: docker-entrypoint.sh  gunicorn_launch.sh  launch.py
backend/models/: __init__.py  assignment.py  assignment_upload.py  association_tables.py  class_session.py  course.py  department.py  file.py  files.py  group.py  personal_note.py  program.py  quiz.py  quiz_answer.py  school.py  teacher_note.py  user.py  user_permission.py
backend/schemas/: __init__.py  assignment.py  assignment_upload.py  auth.py  class_session.py  course.py  department.py  file.py  files.py  group.py  personal_note.py  program.py  quiz.py  quiz_answer.py  teacher_note.py  token.py  two_fa.py  user.py  user_permission.py
backend/scripts/: gunicorn_launch.sh  launch.py
backend/templates/: crud.pyt  endpoint.pyt  model.pyt  schema.pyt
backend/templates/email-templates/: reset-password.html  (+2 more)
backend/tests/: conftest.py
backend/utils/: __init__.py  deps.py  generator.py  populate.py  utils.py
(+697 files in other folders)
