[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Daze <dazehere@yandex.com>", "Yugesh <yugu.upadhyaya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
alembic = "^1.5.7"
python-multipart = "^0.0.5"
email-validator = "^1.1.2"
requests = "^2.25.1"
celery = "^5.0.5"
tenacity = "^7.0.0"
pydantic = "^1.8.1"
emails = "^0.6"
raven = "^6.10.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.8.6"
SQLAlchemy = "^1.4.2"
pytest = "^6.2.2"
uvicorn = {version = "^0.17.6", extras = ["standard"]}
Faker = "^8.1.0"
Mako = "^1.1.4"
click = "^7.1.2"
aioredis = "^1.3.1"
aiofiles = "^0.6.0"
cryptography = "^36.0.2"
PyYAML = "^6.0"
Jinja2 = "^3.0.3"
pyotp = "^2.6.0"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^20.8b1"
isort = "^5.8.0"
autoflake = "^1.4"
flake8 = "^3.9.0"
pytest = "^6.2.2"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^2.11.1"
pylint = "^2.7.2"
rope = "^0.18.0"
jedi = "^0.18.0"
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
